--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.0.4",
+    "puppeteer": "^10.0.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
